--- a/css/sing_up.css
+++ b/css/sing_up.css
@@ -98,3 +98,12 @@
     margin-left: 0;
     width: 20%;
 }
+
+.form_container img {
+    width: 200px;
+    position: absolute;
+    bottom: 0;
+    left: -20px;
+    bottom: -20px;
+    padding: 0;
+}
